[tool.poetry]
name = "jupyter-env"
version = "0.1.0"
description = "\"Environment to execute jupyter notebooks\""
readme = "README.md"
authors = ["Martin Krause <martin.krause.19885@gmail.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.0"
pandas = "^2.0.1"
scikit-learn = "1.0.2"
catboost = "^1.2"
pyarrow = "11.0.0"
mlflow = "^2.3.2"
seaborn = "^0.12.2"
hyperopt = "^0.2.7"
xgboost = "^1.7.5"
optuna = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
