[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["lerummi <martin.krause.85@gmx.de>"]
packages = [
    { include = "batch.py" }
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
pytest = "^7.4.0"
scikit-learn = "^1.3.0"
fastparquet = "^2023.7.0"
pyarrow = "^12.0.1"
s3fs = "^2023.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
